--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,16 +3,12 @@ import org.gradle.api.internal.FeaturePreviews
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-android-extensions'
+
 }
 
 apply plugin: 'com.android.application'
 android {
     compileSdk 32
-
-    buildFeatures {
-        viewBinding true
-    }
 
     defaultConfig {
         applicationId "com.boriyevfayz.practical_english"
@@ -37,6 +33,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding {
+        enabled = true
+    }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -53,12 +55,10 @@ dependencies {
 
     //Pdf viewer
     implementation 'com.dmitryborodin:pdfview-android:1.1.0'
+
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
-    testImplementation 'junit:junit:'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
